--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ fastapi
 uvicorn
 jinja2
 sqlalchemy
-passlib[bcrypt]
 python-multipart
 itsdangerous
 pillow
 python-dotenv
 psycopg2-binary
 stripe==10.12.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
