--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ stripe==10.12.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
 requests>=2.31.0
+cloudinary==1.41.0
+python-dotenv>=1.0
+python-multipart>=0.0.9
