--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,9 @@ python-multipart
 itsdangerous
 pillow
 python-dotenv
-psycopg[binary]
-stripe==10.12.0
+requests>=2.31.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
-requests>=2.31.0
+stripe==10.12.0
 cloudinary==1.41.0
-python-dotenv>=1.0
-python-multipart>=0.0.9
+psycopg[binary]==3.1.18
